--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,8 @@ openpyxl==3.1.2
 xlsxwriter==3.1.9
 pywin32==306; sys_platform == "win32"
 
-# AI/NLP
-openai==1.3.8
-anthropic==0.7.8
-tiktoken==0.5.2
+# Local AI with Ollama
+aiohttp==3.9.1
 
 # Data processing
 pandas==2.1.4
